Added vcpkg support and try catch for all exceptions (no e.what() support)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,24 @@
-﻿cmake_minimum_required (VERSION 3.28)
+﻿if(UNIX AND NOT APPLE)
+cmake_minimum_required (VERSION 3.25)
+else()
+cmake_minimum_required (VERSION 3.40)
+endif()
+
+set(VCPKG_OVERLAY_TRIPLETS "${CMAKE_CURRENT_SOURCE_DIR}/out/build/triplets")
+if(WIN32)
+    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
+    set(VCPKG_TARGET_TRIPLET x64-windows-static)
+    add_compile_definitions(_WIN32_WINNT=0x0A00)
+elseif(UNIX AND NOT APPLE)
+    set(VCPKG_TARGET_TRIPLET x64-linux-static)
+endif()
 
 project ("btc_serverLogger_x64"
     LANGUAGES CXX
 )
-include(FetchContent)
 
 add_library (btc_serverLogger_x64 SHARED)
+
 target_include_directories(btc_serverLogger_x64 PRIVATE
     "include"
 )
@@ -14,35 +27,15 @@ target_sources (btc_serverLogger_x64 PRIVATE
     "src/dllmain.cpp"
     "src/dllmain.def"
     "src/armaLogData.cpp"
-    "include/armaLogData.hpp"
-    "include/coutToDebug.hpp"
-    "include/dllmain.hpp"
     )
 target_compile_features(btc_serverLogger_x64 PRIVATE cxx_std_20)
-
-FetchContent_Declare(json URL https://github.com/nlohmann/json/archive/refs/tags/v3.11.3.zip)
-FetchContent_MakeAvailable(json)
-
-if(MSVC)
-    target_compile_options(btc_serverLogger_x64 PRIVATE
-        $<$<CONFIG:>:/MT>
-        $<$<CONFIG:Debug>:/MTd>
-        $<$<CONFIG:Release>:/MT>
-    )
-endif()
-
-set(Boost_USE_STATIC_LIBS ON)
-set(Boost_USE_STATIC_RUNTIME ON)
-
-if(WIN32)
-    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
-    set(BOOST_ROOT "c:/boost_1_85_0")
-    set(BOOST_LIBRARYDIR "${BOOST_ROOT}/stage/lib")
-endif()
 
 if(UNIX AND NOT APPLE)
     target_link_options(btc_serverLogger_x64 PRIVATE -static-libgcc -static-libstdc++)
 endif()
 
-find_package(Boost 1.85 REQUIRED)
-target_link_libraries(btc_serverLogger_x64 PRIVATE Boost::boost nlohmann_json::nlohmann_json)
+find_package(nlohmann_json CONFIG REQUIRED)
+target_link_libraries(btc_serverLogger_x64 PRIVATE nlohmann_json::nlohmann_json)
+
+find_package(Boost COMPONENTS algorithm range REQUIRED) 
+target_link_libraries(btc_serverLogger_x64 PRIVATE Boost::algorithm Boost::range)
