--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -17,9 +17,11 @@ jobs:
           container: debian:bookworm
           cfgpreset: 'ninja-multi-vcpkg'
           buildp: 'ninja-vcpkg-release'
+          outputfolder: './out/build/ninja-multi-vcpkg/Release/btc_serverLogger_x64.so'
         - os: windows-2022
           cfgpreset: 'ninja-multi-windows-vcpkg'
           buildp: 'ninja-vcpkg-windows-release'
+          outputfolder: './out/build/ninja-multi-windows-vcpkg/Release/btc_serverLogger_x64.dll'
           
     runs-on: ${{ matrix.config.os }}
     steps:
@@ -44,3 +46,44 @@ jobs:
 
           # This is the name of the CMakePresets.json's configuration to build the project.
           buildPreset: ${{ matrix.config.buildp }}
+      - uses: actions/upload-artifact@v4
+        with:
+          # Name of the artifact to upload.
+          # Optional. Default is 'artifact'
+          name: 'btc_serverLogger_x64'
+
+          # A file, directory or wildcard pattern that describes what to upload
+          # Required.
+          path: ${{ matrix.config.outputfolder }}
+
+          # The desired behavior if no files are found using the provided path.
+          # Available Options:
+          #   warn: Output a warning but do not fail the action
+          #   error: Fail the action with an error message
+          #   ignore: Do not output any warnings or errors, the action does not fail
+          # Optional. Default is 'warn'
+          if-no-files-found: error
+
+          # Duration after which artifact will expire in days. 0 means using default retention.
+          # Minimum 1 day.
+          # Maximum 90 days unless changed from the repository settings page.
+          # Optional. Defaults to repository settings.
+          # retention-days:
+
+          # The level of compression for Zlib to be applied to the artifact archive.
+          # The value can range from 0 to 9.
+          # For large files that are not easily compressed, a value of 0 is recommended for significantly faster uploads.
+          # Optional. Default is '6'
+          compression-level: 0
+
+          # If true, an artifact with a matching name will be deleted before a new one is uploaded.
+          # If false, the action will fail if an artifact for the given name already exists.
+          # Does not fail if the artifact does not exist.
+          # Optional. Default is 'false'
+          # overwrite:
+
+          # Whether to include hidden files in the provided path in the artifact
+          # The file contents of any hidden files in the path should be validated before
+          # enabled this to avoid uploading sensitive information.
+          # Optional. Default is 'false'
+          # include-hidden-files:
