--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -14,11 +14,13 @@ jobs:
       matrix:
         config:
         - os: ubuntu-20.04
+          artifactname: 'btc_serverLogger_x64.so'
           container: debian:bookworm
           cfgpreset: 'ninja-multi-vcpkg'
           buildp: 'ninja-vcpkg-release'
           outputfolder: './out/build/ninja-multi-vcpkg/Release/btc_serverLogger_x64.so'
         - os: windows-2022
+          artifactname: 'btc_serverLogger_x64.dll'
           cfgpreset: 'ninja-multi-windows-vcpkg'
           buildp: 'ninja-vcpkg-windows-release'
           outputfolder: './out/build/ninja-multi-windows-vcpkg/Release/btc_serverLogger_x64.dll'
@@ -50,7 +52,7 @@ jobs:
         with:
           # Name of the artifact to upload.
           # Optional. Default is 'artifact'
-          name: 'btc_serverLogger_x64'
+          name: ${{ matrix.config.artifactname }}
 
           # A file, directory or wildcard pattern that describes what to upload
           # Required.
