Update cmake-multi-platform.yml to use Releases

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -3,11 +3,9 @@
 name: VCPKG
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+  release:
+    types: [created]
+    
 jobs:
   build:
     strategy:
