Revert "Merge branch 'main' of https://github.com/Fyuran/serverLogger"
This reverts commit 011416ae71d33c33f0a3767d733a414543c01606, reversing
changes made to 03ff5ac18da95c24fa3fc37cd7ab9b47e644d266.

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -34,13 +34,13 @@ jobs:
         run: |
           apt update && apt install sudo -y
           sudo apt upgrade -y
-          sudo apt install unzip pkg-config git nodejs curl build-essential -y
+          sudo apt install unzip git nodejs curl build-essential -y
       - name: Install dependencies
         if: ${{ (!env.ACT) &&  (runner.os == 'Linux') }}
         run: |
           apt update
           apt upgrade -y
-          apt install unzip pkg-config git nodejs curl build-essential -y
+          apt install unzip git nodejs curl build-essential -y
       - uses: actions/checkout@v4
         with:
           submodules: true
