Revert "Merge branch 'main' of https://github.com/Fyuran/serverLogger"
This reverts commit ebf1ce15402cdc18e09df1e9e287826cb71951c0, reversing
changes made to 9aeb12b66812e1e3c63da4500286ed67ef1acc43.

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -3,9 +3,11 @@
 name: VCPKG
 
 on:
-  release:
-    types: [created]
-    
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
   build:
     strategy:
